--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 </div>
 <div id="dist">
     <div id="distValue">000</div>
-    <div class="record">Record: </div>
+    <div id="record" class="record">Record: </div>
 </div>
 
 <div id="instructions">Clica para saltar<span class="lightInstructions"> — Evita os obstáculos!</span></div>
 
 
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r80/three.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r80/three.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/264161/OrbitControls.js'></script><script  src="./script.js"></script>
 
