--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
     <div id="record" class="record">Record: </div>
 </div>
 
-<div id="instructions">Clica para saltar<span class="lightInstructions"> — Evita os obstáculos!</span></div>
+<div id="instructions">Clica no espaço para saltar<span class="lightInstructions"> — Evita os corais!</span></div>
 
 
 <!-- partial -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r80/three.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/264161/OrbitControls.js'></script><script  src="./script.js"></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/264161/OrbitControls.js'></script>
+<script  src="./script.js"></script>
 
 </body>
 </html>
