--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
 
 <div id="instructions">Clica no espaço para saltar<span class="lightInstructions"> — Evita os corais!</span></div>
-
+<div id="lights">Alcances de luz: 1-Perto 2-Medio 3-Longo | Mudar camara: C</div>
 
 <!-- partial -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r80/three.js'></script>
