--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 <div id="dist">
     <div id="distValue">000</div>
-    <div id="record" class="record">Record: </div>
+    <div class="distance">Distância</div>
 </div>
 
 <div id="instructions">Clica no espaço para saltar<span class="lightInstructions"> — Evita os corais!</span></div>
